--- a/Task03/app/src/main/res/values/strings.xml
+++ b/Task03/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">Task03</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="car">car</string>
+    <string name="rocket">rocket</string>
+    <string name="dog">dog</string>
 </resources>
