ToolBar, TabLayout, Design Ready

--- a/Task03/app/src/main/res/values/strings.xml
+++ b/Task03/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="car">car</string>
     <string name="rocket">rocket</string>
     <string name="dog">dog</string>
+    <string name="title">ChiLL Out BRO - there is no textAlignment</string>
 </resources>
