--- a/Task03/app/src/main/res/values/strings.xml
+++ b/Task03/app/src/main/res/values/strings.xml
@@ -1,9 +1,11 @@
 <resources>
     <string name="app_name">Task03</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-    <string name="car">car</string>
-    <string name="rocket">rocket</string>
-    <string name="dog">dog</string>
-    <string name="title">ChiLL Out BRO - there is no textAlignment</string>
+    <string name="seven_days">7 days</string>
+    <string name="three_days">3 days</string>
+    <string name="today">today</string>
+    <string name="location">Location</string>
+
+
+
 </resources>
